RESOLVED FIXED256110
REGRESSION (262297@main): Cursor styles don't work in Catalyst apps that don't support indirect touches
https://bugs.webkit.org/show_bug.cgi?id=256110
Summary REGRESSION (262297@main): Cursor styles don't work in Catalyst apps that don'...
Wenson Hsieh
Reported 2023-04-28 14:08:39 PDT
Attachments
Wenson Hsieh
Comment 1 2023-04-28 14:58:13 PDT
EWS
Comment 2 2023-04-28 17:16:21 PDT
Committed 263522@main (4f0df9c94db2): <https://commits.webkit.org/263522@main> Reviewed commits have been landed. Closing PR #13291 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.