REGRESSION (262297@main): Cursor styles don't work in Catalyst apps that don't support indirect touches https://bugs.webkit.org/show_bug.cgi?id=256110 rdar://108072867

Reviewed by Tim Horton.

262297@main removed `@(UITouchTypeDirect)` from the set of allowed touch types; however, this is
still necessary in order for tracking (and cursor styles) to work in Catalyst apps that don't have
the `UIApplicationSupportsIndirectInputEvents` application plist key set, since the mouse gesture
(which also handles hover in Catalyst) still relies on sending direct touches.

Instead, we can keep the behavior following 262297@main intact while also keeping this Catalyst case
working by:

1.  Putting `UITouchTypeDirect` back in the allowed touch types list, and…
2.  Using the `-_isPointerTouch` SPI to reject touches that aren't actually sent via trackpad, via
    the gesture recognizer delegate hook.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView gestureRecognizer:shouldReceiveTouch:]):
(-[WKContentView _configureMouseGestureRecognizer]):

Canonical link: https://commits.webkit.org/263522@main